--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone: Asia/Shanghai
+timezone: America/Chicago
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://DavidO-GRC.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: DavidO-GRC # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: DavidO_GRC # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -39,7 +39,7 @@ social:
   fediverse_handle: # fill in your fediverse handle. E.g. "@username@domain.com"
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/DavidO_GRC # change to your Twitter homepage
+    - https://x.com/DavidO_Grc # change to your Twitter homepage
     - https://github.com/DavidO-GRC # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
