--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,12 @@ social:
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: David Olowokere
   email: example@domain.com # change to your email address
-  fediverse_handle: # fill in your fediverse handle. E.g. "@username@domain.com"
+  linkedin: https://www.linkedin.com/in/dave-olowo # fill in your fediverse handle. E.g. "@username@domain.com"
   links:
     # The first element serves as the copyright owner's link
     - https://x.com/DavidO_Grc # change to your Twitter homepage
     - https://github.com/DavidO-GRC # change to your GitHub homepage
+    - https://www.linkedin.com/in/dave-olowo # change my linkedin hompage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
