fix: update _config.yml
Signed-off-by: D.O.T <166849853+DavidO-GRC@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -226,3 +226,7 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+    ui:
+  last_modified:
+    enabled: false
