--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@ show_lastmod: false
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: D.O.T # the main title
+title: D.O.T # Decision. Outcome. Trust
 
-tagline: Human-Centric GRC & Data Governance # it will display as the subtitle
+tagline: Designing Governance for How People Actually Behave # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Navigating Risk through Behavioral Science and Data Governance.
+  Behavioral GRC & Data Governance
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
