--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://DavidO-GRC.github.io"
+url: "https://DOT-BS.github.io"
 
 github:
   username: DavidO-GRC # change to your GitHub username
@@ -154,7 +154,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/Blogs"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
